--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- MDB -->
   <script type="text/javascript" src="js/mdb.min.js" defer></script>
   <!-- Custom scripts -->
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
   <script src="./js/index.js" defer></script>
 </head>
 
@@ -30,6 +31,9 @@
         <p class="prefix">Question:</p>
         <h1 id="counter">1/3</h1>
       </div>
+
+      <div id="google_translate_element"></div>
+
       <div class="score">
         <p class="prefix">Score:</p>
         <h1 id="score">3</h1>
@@ -47,6 +51,7 @@
         <div class="answer-container card">
           <p class="answer-prefix">A</p>
           <p class="answer-text" data-answer="a">Answer A</p>
+          <!-- <p class="answer-text" data-answer="a">Answer A</p> -->
         </div>
       </div>
     </div>
@@ -89,6 +94,8 @@
         </div>
       </div>
     </div>
+
+   
 
   </body>
 
