--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <p class="prefix">Question:</p>
         <h1 id="counter">1/3</h1>
       </div>
+
+      <div id="google_translate_element"></div>
+
       <div class="score">
         <p class="prefix">Score:</p>
         <h1 id="score">3</h1>
