--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- MDB -->
   <script type="text/javascript" src="js/mdb.min.js" defer></script>
   <!-- Custom scripts -->
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
   <script src="./js/index.js" defer></script>
 </head>
 
